--- a/Lab_Management.v1/src/main/resources/static/css/styles.css
+++ b/Lab_Management.v1/src/main/resources/static/css/styles.css
@@ -1,6 +1,10 @@
 @import url('https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css');
 body {
     font-family: Arial, sans-serif;
+    background-image: url(Images/bglogin.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .form-group {
@@ -37,7 +41,7 @@ form>div>div{
     background-color: rgba(255,255,255,0.8);
     border: 1px solid #ddd;
     border-radius: 5px;
-    padding: 20px;
+    padding: 15px;
     margin: 20px;
     text-align: center;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
@@ -69,6 +73,7 @@ form>div>div{
 
 .lab-info {
     font-size: 14px;
+    font-weight: bold;
     margin-bottom: 10px;
 }
 
@@ -78,4 +83,7 @@ form>div>div{
 
 .form-control {
     border-color: #007bff;
+}
+.icon-checkzzz{
+    cursor: pointer;
 }
