--- a/Lab_Management.v1/src/main/resources/templates/admin/add-nocite.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/add-nocite.html
@@ -7,7 +7,7 @@
 <body>
 <notice>
     <div th:if="${success}" style="display: flex; justify-content: flex-end; align-items: flex-end;
-                                    position: fixed; bottom: 10px; right: 10px; background: linear-gradient(45deg, rgba(229,191,22,0.45), rgba(152,229,18,0.45))">
+                                    position: fixed; top: 7em; right: 10px; background: linear-gradient(45deg, rgba(229,191,22,0.45), rgba(152,229,18,0.45))">
         <p id="successMessage" style="padding: 15px;
                                     border: 1px solid transparent;
                                     border-radius: 4px;
