--- a/Lab_Management.v1/src/main/resources/templates/admin/equipments.html
+++ b/Lab_Management.v1/src/main/resources/templates/admin/equipments.html
@@ -12,28 +12,21 @@
 <body class="scroll-container">
 
 <equipment><!--<div th:replace="admin/templateAdmin.html :: header-admin"></div>-->
-    <h1 style="margin-top: 50px; text-align: center;">Danh sách các thiết bị </h1>
+    <h1 style="margin-top: 50px; text-align: center;" th:text="'Danh sách các thiết bị'"> </h1>
+    <h1 style=" text-align: center; font-size: 2em" th:text="'Số lượng: ' + ${#lists.size(allEquipment)}"></h1>
     <br>
-    <div style="display:flex; justify-content:center; align-content: center">
-        <a href="/Lab/admin/Equipment/add">
-            <button type="button" class="btn btn-primary font-bold font-size-xlg">Thêm Thiết bị</button>
-        </a>
-    </div>
-    <br>
-<!--    <div th:if="${addphone}" style="display: flex; justify-content: flex-end; align-items: flex-end;
-                                position: fixed; bottom: 10px; right: 10px; background: linear-gradient(45deg, rgba(229,191,22,0.45), rgba(152,229,18,0.45))">
-        <p id="successMessage" style="padding: 15px;
-                                border: 1px solid transparent;
-                                border-radius: 4px;
-                                color: #721c24;
-                                border-color: black;
-                                margin-bottom: 0;
-                                font-weight: bold;">Thao tác thành công (<span id="countdown">3</span>)</p>
-    </div>-->
-    <div style="display:flex; justify-content:center; align-content: center">
-        <a href="/Lab/admin/ExportEquipments">
-            <h5>Tài về danh sách</h5>
-        </a>
+    <div class="row">
+        <div class="col-6 d-flex justify-content-center mb-5">
+            <a href="/Lab/admin/Equipment/add">
+                <button type="button" class="btn btn-primary font-bold font-size-xlg">Thêm Thiết bị</button>
+            </a>
+        </div>
+        <br>
+        <div class="col-6 d-flex justify-content-center mb-5">
+            <a href="/Lab/admin/ExportEquipments">
+                <button type="button" class="btn btn-primary font-bold font-size-xlg">Tài về danh sách</button>
+            </a>
+        </div>
     </div>
 
 
