--- a/Lab_Management.v1/src/main/resources/templates/headernew.html
+++ b/Lab_Management.v1/src/main/resources/templates/headernew.html
@@ -94,7 +94,7 @@
                         </a>
                     </div>
                     <div class="d-none d-lg-flex flex-column">
-                        <a href="/Lab/mybooking">
+                        <a th:href="'/Lab/mybooking?username='+${#authentication.name}">
                         <strong>
                             <span class="title">Đặt lịch của tôi</span>
                         </strong>
